--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,24 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==1.26.4
+# nvidia-cublas-cu12==12.1.3.1
+# nvidia-cuda-cupti-cu12==12.1.105
+# nvidia-cuda-nvrtc-cu12==12.1.105
+# nvidia-cuda-runtime-cu12==12.1.105
+# nvidia-cudnn-cu12==8.9.2.26
+# nvidia-cufft-cu12==11.0.2.54
+# nvidia-curand-cu12==10.3.2.106
+# nvidia-cusolver-cu12==11.4.5.107
+# nvidia-cusparse-cu12==12.1.0.106
+# nvidia-nccl-cu12==2.19.3
+# nvidia-nvjitlink-cu12==12.8.61
+# nvidia-nvtx-cu12==12.1.105
+passlib==1.7.4
 pillow==10.2.0
 pydantic==2.10.6
 pydantic-settings==2.8.0
 pydantic_core==2.27.2
+PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 pytz==2025.1
