--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Basic Auth for Swagger UI
-VALID_USERNAME=maidung
-VALID_PASSWORD=123
+VALID_USERNAME=
+VALID_PASSWORD=
 
 # JWT Authentication
 ALGORITHM=HS256
