--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ VALID_PASSWORD=
 # JWT Authentication
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+SECRET_KEY = secrets.token_hex(32)
+PWD_CONTEXT = CryptContext(schemes=["bcrypt"], deprecated="auto")
 
 # MLFlow settings (existing)
 MLFLOW_TRACKING_URI=http://0.0.0.0:8000
