--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=465
 MAIL_STARTTLS=False
 MAIL_SSL_TLS=True
+
+# CURRENT DOMAIN
+DOMAIN=http://localhost:5500
